--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.5
+  dio: ^5.1.2
+  shared_preferences: ^2.1.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
